--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
-  "presets": ["es2015", "stage-3"],
+  "presets": ["es2015"],
   "plugins": ["add-module-exports", "transform-es2015-modules-umd"]
 }
