--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "karma-chrome-launcher": "^1.0.1",
     "karma-mocha": "^1.1.1",
     "karma-phantomjs-launcher": "^1.0.1",
+    "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.26",
     "mkdirp": "^0.5.1",
     "mocha": "^2.5.3",
